Restyled form.jsx, fixed main container spacing

--- a/react_main/src/css/main.css
+++ b/react_main/src/css/main.css
@@ -60,14 +60,10 @@
 
 html,
 body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-
-html,
-body {
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   margin: 0px;
   padding: 0px;
 
@@ -106,30 +102,11 @@ a {
   min-height: 100vh;
 }
 
-.main-container {
-  display: flex;
-  flex-flow: column nowrap;
-
-  box-sizing: border-box;
-  width: 1000px;
-  max-width: 100%;
-  padding: 20px;
-}
-
 .header {
   flex-shrink: 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin-bottom: 8px;
-}
-
-.header .logo-wrapper {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 8px;
 }
 
 .header .logo {
@@ -655,15 +632,6 @@ input:focus {
  */
 
 @media (max-width: 700px) {
-  .header {
-    flex-flow: column;
-    margin-top: 8px;
-  }
-
-  .logo-wrapper {
-    margin-left: 0px;
-  }
-
   .nav-wrapper {
     /* flex-flow: column wrap; */
     justify-content: center;
